// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetectionChips > renders all three assessment rows with confirm button 1`] = `
<div>
  <div
    class="py-6 space-y-5"
    data-testid="detection-chips-container"
  >
    <h2
      class="text-lg font-light text-black leading-tight"
    >
      Please confirm our assessment:
    </h2>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center gap-3 px-4 py-3 rounded-xl border border-black/8 bg-white/60 "
        data-state="pending"
        data-testid="detection-chip-standing"
      >
        <span
          class="text-sm text-black/50 whitespace-nowrap"
        >
          You're a
        </span>
        <span
          class="flex-1 text-sm font-medium text-black/80"
        >
          Professor
        </span>
        <button
          class="text-xs font-medium text-black/40 hover:text-black/70 px-2.5 py-1 rounded border border-black/10 hover:border-black/25 transition-all"
          data-testid="detection-chip-standing-edit"
        >
          Edit
        </button>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 rounded-xl border border-black/8 bg-white/60 "
        data-state="pending"
        data-testid="detection-chip-domain"
      >
        <span
          class="text-sm text-black/50 whitespace-nowrap"
        >
          Domain:
        </span>
        <span
          class="flex-1 text-sm font-medium text-black/80"
        >
          Evolutionary Biology
        </span>
        <button
          class="text-xs font-medium text-black/40 hover:text-black/70 px-2.5 py-1 rounded border border-black/10 hover:border-black/25 transition-all"
          data-testid="detection-chip-domain-edit"
        >
          Edit
        </button>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 rounded-xl border border-black/8 bg-white/60 "
        data-state="pending"
        data-testid="detection-chip-work-type"
      >
        <span
          class="text-sm text-black/50 whitespace-nowrap"
        >
          Work type:
        </span>
        <span
          class="flex-1 text-sm font-medium text-black/80"
        >
          Original Argument
        </span>
        <button
          class="text-xs font-medium text-black/40 hover:text-black/70 px-2.5 py-1 rounded border border-black/10 hover:border-black/25 transition-all"
          data-testid="detection-chip-work-type-edit"
        >
          Edit
        </button>
      </div>
    </div>
    <button
      class="w-full py-3.5 rounded-xl text-sm font-medium bg-black/90 text-white hover:bg-black/70 cursor-pointer transition-all"
      data-testid="detection-confirm-btn"
    >
      Confirm
    </button>
  </div>
</div>
`;

exports[`DetectionChips > renders error state 1`] = `
<div>
  <div
    class="py-8 text-center"
    data-testid="detection-chips-container"
  >
    <p
      class="text-sm text-red-600"
    >
      Detection failed
    </p>
  </div>
</div>
`;

exports[`DetectionChips > renders loading state 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 space-y-3"
    data-testid="detection-chips-container"
  >
    <div
      class="w-6 h-6 border-2 border-black/20 border-t-black/60 rounded-full animate-spin"
    />
    <p
      class="text-sm text-black/40 font-light"
    >
      Reading your work…
    </p>
  </div>
</div>
`;
